# ruffle

./: .gitignore  CHANGELOG.md  Cargo.toml  HANDOFF.md  LICENSE-MIT  README.md  deny.toml
.github/workflows/: coverage.yaml  release.yaml  test.yaml
benches/: fusion.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml  tox.ini
bindings/python/python/ruffle/: __init__.py  _channels.py  _config.py  _core.pyi  _fit.py  _frozen.py  _fuser.py  _state.py  _types.py
bindings/python/src/: lib.rs
bindings/python/tests/: conftest.py  test_api.py  test_cli_interop.py  test_fit.py  test_parity.py  test_typing.py
bindings/python/tests/fixtures/fit/: scifact32.json  ties.json
bindings/wasm/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.browser.config.ts  vitest.config.ts
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: api.test.ts  cli-interop.test.ts  consumer.test.ts  helpers.ts  node-fixtures.ts  packaging.test.ts  parity.test.ts  replay.ts  typecheck.test.ts
bindings/wasm/tests/browser/: parity.browser.test.ts
bindings/wasm/ts/: anchor.ts  boundary.ts  config.ts  errors.ts  fuser.ts  index.ts  init.ts  state.ts  types.ts
docs/: derivation.md  roadmap.md  tuning.md
docs/proposals/: feedback-learned-weights.md  go-bindings.md  python-bindings.md  typescript-bindings.md
evals/: README.md  requirements.txt
evals/results/: RESULTS.md  SUMMARY.md  cqadupstack.json  fiqa-curve.json  fiqa-degraded.json  fiqa.json  msmarco.json  nfcorpus-curve.json  nfcorpus-degraded.json  nfcorpus.json  quora-curve.json  quora-degraded.json  quora.json  scifact-curve.json  scifact-degraded.json  scifact.json  tuning-natural.json  tuning.json
evals/ruffle_evals/: __init__.py  __main__.py  ablate.py  baselines.py  channels.py  cli.py  datasets.py  evaluate.py  experiments.py  fitted.py  fusion.py  heavy.py  protocol.py  summarize.py  tune.py
src/: config.rs  error.rs  fuser.rs  ingest.rs  keys.rs  lib.rs  score.rs  state.rs  summary.rs  weighting.rs
src/ingest/: anchor.rs  input.rs
src/weighting/: coupling.rs  discrimination.rs  fusion.rs  linalg.rs
tests/: adversarial.rs  cli_e2e.rs  cli_smoke.rs  derivation_sims.rs  lifecycle.rs  parity_fixtures.rs  properties.proptest-regressions  properties.rs
tests/fixtures/parity/: coupling_redundancy_discount.json  decay_per_update.json  merge_reconcile.json  quickstart_three_channels.json  refusals.json  state_ops_rekey_decay.json  stateless_with_prior.json  ties_and_edge_inputs.json
