[package]
name = "ruffle-py"
# Version lockstep: this always equals the core crate version it links, and both
# release from the same tag. The release workflow asserts the equality.
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Python bindings for ruffle: weighted, adaptive, calibration-free reciprocal-rank fusion."
repository = "https://github.com/lathrys-at/ruffle"
# Publishes to PyPI (as the wheel's compiled core), never to crates.io.
publish = false

[lib]
name = "ruffle_core"
crate-type = ["cdylib"]

[dependencies]
# abi3-py310 targets the stable ABI at the lowest supported CPython, so one wheel per
# platform covers that version and everything after. The floor is the lowest version
# still receiving security updates; when it drops out of support, this feature moves
# together with requires-python and the classifiers in pyproject.toml and the tox
# envlist.
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py310"] }
ruffle = { path = "../.." }
# State crosses the FFI boundary as canonical JSON. `float_roundtrip` keeps the
# round-trip bit-exact, matching the core crate's CLI (see the root Cargo.toml).
serde_json = { version = "1", features = ["float_roundtrip"] }

[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
