[package]
name = "ruffle-wasm"
# Version lockstep: this always equals the core crate version it links, and both
# release from the same tag. The release workflow asserts the equality, along with
# the npm package version.
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "WebAssembly core of the @lathrys-at/ruffle npm package: weighted, adaptive, calibration-free reciprocal-rank fusion."
repository = "https://github.com/lathrys-at/ruffle"
# Publishes to npm (as the package's compiled core), never to crates.io.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ruffle = { path = "../.." }
serde = { version = "1", features = ["derive"] }
# State crosses the boundary as canonical JSON. `float_roundtrip` keeps the round-trip
# bit-exact, matching the core crate's CLI (see the root Cargo.toml).
serde_json = { version = "1", features = ["float_roundtrip"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"

# Size-optimize the shipped artifact; wasm-opt preserves wasm's exact IEEE-754
# semantics, and the parity suite asserts the output is still bit-identical.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
